--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="description">description</string>
+    <string name="noteIdFormat">id: %1$s</string>
+    <string name="noteTextFormat">text: %1$s</string>
+    <string name="noteCommentFormat">comment: %1$s</string>
 </resources>
